# steganosaure

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/steganosaure/: array_reshaping.py  image_io.py
steganosaure/: cli.py
tests/: test_image_io.py  test_steganography.py  test_string_conversion.py
