[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = ""
name = "steganosaure"
packages = [{include = "steganosaure"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
deal = "^4"
numpy = "^1"
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23"
flake8 = "^6"
flake8-bugbear = "^23"
flake8-docstrings = "^1"
hypothesis = "^6"
isort = "^5"
mypy = "^1"
pylint = "^2"
pytest = "^7"

[tool.isort]
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
