[project]
authors = [
  {name = "mog", email = "mog@noreply.git.ogion.eu"},
]
dependencies = [
  "deal >= 4, < 5",
  "numpy >= 2, < 3",
  "scikit-image >= 0.25, < 1",
]
description = "Basic steganography package using numpy and scikit-image."
name = "steganosaure"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[dependency-groups]
dev = [
  "hypothesis >= 6, < 7",
  "mypy >= 1, < 2",
  "pytest >= 8, < 9",
  "ruff >= 0.12, < 1",
]

[tool.ruff]
target-version = "py312"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[project.scripts]
steganosaure = "steganosaure.cli:main"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.8,<0.9.0"]
